<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >
    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents"
        tools:ignore="MissingConstraints">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            >
        </androidx.appcompat.widget.Toolbar>





    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:padding="25dp"
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register_menu"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEmailAndPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple_effect_raise"
        android:text="@string/register_email"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/appName"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName" />
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple_effect_raise"
        android:text="@string/register_google"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnEmailAndPassword"
        app:layout_constraintStart_toStartOf="@+id/btnEmailAndPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnEmailAndPassword" />


    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple_effect_raise"
        android:text="@string/register_facebook"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogle"
        app:layout_constraintStart_toStartOf="@+id/btnGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />



</androidx.constraintlayout.widget.ConstraintLayout>