<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAndLogin.WithFacebook.Facebook_RegisterActivity"
    >

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents"
        tools:ignore="MissingConstraints">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            >
        </androidx.appcompat.widget.Toolbar>





    </com.google.android.material.appbar.AppBarLayout>

    <TextView

        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="@+id/appName"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toTopOf="@+id/appName" />

    <EditText
        android:id="@+id/usernametxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/username"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
    <Button
        android:id="@+id/btnUsernameSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/ripple_effect_raise"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/username_continue"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/usernametxt"
        app:layout_constraintStart_toStartOf="@+id/usernametxt"
        app:layout_constraintTop_toBottomOf="@+id/usernametxt" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:text="@string/have_account"
        android:background="@drawable/ripple_effect_raise"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>