<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/black"
    >
    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ThemeOverlay.MaterialComponents"
        tools:ignore="MissingConstraints">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            >
        </androidx.appcompat.widget.Toolbar>





    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:padding="25dp"
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/home_name"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGameStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple_effect_outline"
        android:text="@string/game_start"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/appName"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <Button
        android:id="@+id/btnShowTopList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ripple_effect_outline"
        android:text="@string/show_top_list"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/appName"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="@+id/appName"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Highest Score : 0"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnGameStart"
        app:layout_constraintStart_toStartOf="@+id/btnGameStart"
        app:layout_constraintTop_toBottomOf="@+id/btnGameStart" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9651456806715960/3088740414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnShowTopList"
        app:layout_constraintStart_toStartOf="@+id/btnShowTopList" />


    <ImageView
        android:id="@+id/heart_1_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/heartred"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heart_2_image" />

    <ImageView
        android:id="@+id/heart_3_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/heartred"
        app:layout_constraintStart_toEndOf="@+id/heart_2_image"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <ImageView
        android:id="@+id/heart_2_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/heartred"
        app:layout_constraintStart_toEndOf="@+id/heart_1_image"
        app:layout_constraintTop_toTopOf="@+id/heart_3_image" />
    <ImageView
        android:id="@+id/heart_1_image_free"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/heart_free"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heart_2_image" />

    <ImageView
        android:id="@+id/heart_3_image_free"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/heart_free"
        app:layout_constraintStart_toEndOf="@+id/heart_2_image"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <ImageView
        android:id="@+id/heart_2_image_free"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        android:src="@drawable/heart_free"
        app:layout_constraintStart_toEndOf="@+id/heart_1_image"
        app:layout_constraintTop_toTopOf="@+id/heart_3_image" />

    <Button
        android:id="@+id/btnEarnHeart"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/ripple_effect_outline"
        android:text="@string/earn_heart"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/heart_3_image"
        app:layout_constraintTop_toBottomOf="@+id/appName" />


</androidx.constraintlayout.widget.ConstraintLayout>